ilex/tests/ui/ambiguous/no_xid_after_id.stderr
error: extraneous characters after `/`-prefixed, `%q`-suffixed identifier
 --> ambiguous/no_xid_after_id.txt:1:22
  |
1 | /foo%q /null%q /foo%qua
  |                      ^^
  |                     -- help: maybe you meant to include a space here
  |
  = note: reported at: ilex/src/rt/emit2.rs:810:10

error: aborting due to previous error
